Fixes NPE in settings when there is no camera detected. Adds additional logging information about the cameras. Fixes waring and removes unused methods.